--- a/backend/chat.html
+++ b/backend/chat.html
@@ -1,54 +1,156 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Interior AI Chat</title>
+  <meta charset="UTF-8" />
+  <title>Interior AI (WhatsApp-style)</title>
+
   <style>
-    body { font-family: Arial; background: #f4f4f4; }
-    #chat { width: 400px; margin: auto; background: white; padding: 10px; }
-    .msg { margin: 5px 0; }
-    .user { font-weight: bold; }
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #ece5dd;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .chat-app {
+      width: 380px;
+      height: 600px;
+      background: #fff;
+      display: flex;
+      flex-direction: column;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+    }
+
+    .chat-header {
+      background: #075e54;
+      color: white;
+      padding: 12px;
+      font-weight: bold;
+    }
+
+    .chat-messages {
+      flex: 1;
+      padding: 10px;
+      background: #ece5dd;
+      overflow-y: auto;
+    }
+
+    .message {
+      max-width: 75%;
+      padding: 8px 10px;
+      margin-bottom: 8px;
+      border-radius: 6px;
+      font-size: 14px;
+      line-height: 1.4;
+      word-wrap: break-word;
+    }
+
+    .user {
+      background: #dcf8c6;
+      margin-left: auto;
+      border-top-right-radius: 0;
+    }
+
+    .bot {
+      background: #fff;
+      margin-right: auto;
+      border-top-left-radius: 0;
+    }
+
+    .chat-input {
+      display: flex;
+      padding: 8px;
+      background: #f0f0f0;
+    }
+
+    .chat-input input {
+      flex: 1;
+      padding: 8px;
+      border-radius: 20px;
+      border: 1px solid #ccc;
+      outline: none;
+    }
+
+    .chat-input button {
+      margin-left: 8px;
+      padding: 8px 16px;
+      background: #075e54;
+      color: white;
+      border: none;
+      border-radius: 20px;
+      cursor: pointer;
+    }
+
+    .chat-input button:hover {
+      background: #0b806f;
+    }
   </style>
 </head>
+
 <body>
 
-<div id="chat">
-  <h3>Interior AI (WhatsApp-style)</h3>
-  <div id="messages"></div>
-  <input id="msg" placeholder="Type your message..." />
-  <button onclick="send()">Send</button>
-</div>
+  <div class="chat-app">
+    <div class="chat-header">
+      Interior AI – WhatsApp Style
+    </div>
 
-<script>
-  const sessionId = "demo_user";
+    <div class="chat-messages" id="chatMessages"></div>
 
-  function addMessage(text, cls) {
-    const div = document.createElement("div");
-    div.className = "msg " + cls;
-    div.innerText = text;
-    document.getElementById("messages").appendChild(div);
-  }
+    <div class="chat-input">
+      <input id="messageInput" placeholder="Type a message..." />
+      <button onclick="sendMessage()">Send</button>
+    </div>
+  </div>
 
-  async function send() {
-    const input = document.getElementById("msg");
-    const message = input.value;
-    if (!message) return;
+  <script>
+    const sessionId = "user_" + Math.floor(Math.random() * 100000);
+    const chatMessages = document.getElementById("chatMessages");
+    const messageInput = document.getElementById("messageInput");
 
-    addMessage("You: " + message, "user");
-    input.value = "";
+    function addMessage(text, sender) {
+      const div = document.createElement("div");
+      div.className = "message " + sender;
+      div.innerText = text;
+      chatMessages.appendChild(div);
+      chatMessages.scrollTop = chatMessages.scrollHeight;
+    }
 
-    const res = await fetch("/chat", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({
-        session_id: sessionId,
-        message: message
-      })
+    async function sendMessage() {
+      const text = messageInput.value.trim();
+      if (!text) return;
+
+      addMessage(text, "user");
+      messageInput.value = "";
+
+      try {
+        const response = await fetch("/chat", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({
+            session_id: sessionId,
+            message: text
+          })
+        });
+
+        const data = await response.json();
+        addMessage(data.reply || "⚠️ No reply", "bot");
+
+      } catch (err) {
+        addMessage("⚠️ Server error", "bot");
+      }
+    }
+
+    messageInput.addEventListener("keypress", function (e) {
+      if (e.key === "Enter") sendMessage();
     });
-
-    const data = await res.json();
-    addMessage("AI: " + data.reply, "ai");
-  }
-</script>
+  </script>
 
 </body>
 </html>
